--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "eslint-config-next": "14.0.4",
     "fast-sort": "^3.4.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-cloudinary": "^5.16.0",
     "postcss": "8.4.32",
     "prisma": "^5.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-if": "^4.1.5",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
