--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "fast-sort": "^3.4.0",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.16.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.14.202",
     "daisyui": "^4.4.24"
   }
 }
